--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <header class="container">
             <div class="row py-4">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <h1 class="mb-3 mt-5 text-center">OTRO TÍTULO</h1>
-                    <h2 class="mb-5 text-center text-uppercase fs-6 text-white-50">Nombre Apellido & Nombre Apellido</h2>
-                    <p class="lead">Reemplacen este párrafo por un texto introductorio, de una extensión máxima de cien palabras. En este y todos los reemplazos, respeten los colores del código fuente en su editor. Tales colores son indicaciones del editor: Esto es algo que no debes confundir con eso.</p>
+                    <h1 class="mb-3 mt-5 text-center">CLASE 2</h1>
+                    <h2 class="mb-5 text-center text-uppercase fs-6 text-white-50">Clara Echeverría</h2>
+                    <p class="lead">Lo que se verá a continuación es una compilación de distintas gráficas figuras, no figurativas y mixtas extraídas de infografías de la página de South China Morning Post.</p>
                 </div>
             </div>
         </header>
@@ -25,34 +25,34 @@
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <hr>
                     <h3 class="text-center my-5">GRÁFICA FIGURATIVA</h3>
-                    <p>Seleccionen cuatro gráficas figurativas. Reemplacen todo este párrafo por una presentación de su selección. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam posuere mauris et faucibus placerat. Fusce ut lobortis tortor.</p>
+                    <p>Esta es una selección de cuatro gráficas figurativas que si bien cumplen una función dentro de las distintas infografías su carácter es mas bien adornativo.</p>
                 </div>                
                 <!--primera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow bg-black">
                         <img loading="lazy" src="img/figurativo1.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3 small text-white-50">Strong as an ox</figcaption>
+                        <figcaption class="p-3 small text-white-50">Strong as an ox, South China Morning Post, 2021</figcaption>
                     </figure>
                 </div>
                 <!--segunda imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow bg-black">
                         <img loading="lazy" src="img/figurativo2.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3 small text-white-50">China´s wildlife market</figcaption>
+                        <figcaption class="p-3 small text-white-50">China´s wildlife market, South China Morning Post, 2020</figcaption>
                     </figure>
                 </div>
                 <!--tercera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow bg-black">
                         <img loading="lazy" src="img/figurativo3.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3 small text-white-50">The many stages of Cantonese opera</figcaption>
+                        <figcaption class="p-3 small text-white-50">The many stages of Cantonese opera, South China Morning Post, 2019</figcaption>
                     </figure>
                 </div>
                 <!--cuarta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow bg-black">
                         <img loading="lazy" src="img/figurativo4.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3 small text-white-50">Coming to the light</figcaption>
+                        <figcaption class="p-3 small text-white-50">Coming to the light, South China Morning Post, 2021</figcaption>
                     </figure>
                 </div>
                 <!--no hay más imágenes-->
@@ -61,20 +61,20 @@
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <hr>                    
                     <h3 class="text-center my-5">GRÁFICA MIXTA</h3>
-                    <p>Seleccionen dos gráficas figurativas mixtas. Reemplacen todo este párrafo por una presentación de su selección. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam posuere mauris et faucibus placerat. Fusce ut lobortis tortor.</p>
+                    <p>En esta selección de gráficas mixtas podemos ver como una imagen acompaña al gráfico, al mismo tiempo que aporta información.</p>
                 </div>
                 <!--primera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow bg-black">
                         <img loading="lazy" src="img/mixto1.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3 small text-white-50">Darren Long at the Post</figcaption>
+                        <figcaption class="p-3 small text-white-50">Darren Long at the Post, South China Morning Post, 2021</figcaption>
                     </figure>
                 </div>
                 <!--segunda imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow bg-black">
                         <img loading="lazy" src="img/mixto2.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3 small text-white-50">Apocalypse now</figcaption>
+                        <figcaption class="p-3 small text-white-50">Apocalypse now, South China Morning Post, 2020</figcaption>
                     </figure>
                 </div>
                 <!--no hay más imágenes-->
@@ -83,17 +83,17 @@
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <hr>
                     <h3 class="text-center my-5">GRÁFICA NO FIGURATIVA</h3>
-                    <p>Generen una gráfica no figurativa probando algún <em>data sample</em> y siguiendo las recomendaciones de <a href="https://app.rawgraphs.io/" target="_blank">RAWGraphs 2.0 Beta</a>. Cambien la indicación recién presentada y lo que sigue en este párrafo por una presentación de lo generado. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam posuere mauris et faucibus placerat. Fusce ut lobortis tortor.</p>                    
+                    <p>Siguiendo las recomendaciones de <a href="https://app.rawgraphs.io/" target="_blank">RAWGraphs 2.0 Beta</a>, se generó esta gráfica no figurativa sobre el índice de felicidad, que muestra como el valor de distintos factores va variando desde el 2005 al 2020. Siendo los factores los siguientes: en azul "generosity", en verde "perceptions of corruption", en naranjo "negative affect" y por último, en rojo "postive affect".  </p>                    
                 </div>
                 <!--solo un gráfico-->
                 <div class="col-md-12 col-lg-11 col-xl-10 col-xxl-9 mx-auto">
                     <figure class="shadow bg-black">
                         <img loading="lazy" src="img/viz.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3 small text-white-50">Reemplaza el texto en este pie de foto.</figcaption>
+                        <figcaption class="p-3 small text-white-50">RAW Graphs</figcaption>
                     </figure>
                 </div>
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <p class="small text-white-50 mb-5">La gráfica de arriba se despliega en la página como si se tratara de una imagen rasterizada, con el elemento <a href="https://developer.mozilla.org/es/docs/Web/HTML/Element/img" target="_blank">&lt;img&gt;</a>. Otros elementos de HTML podrían usarse para un mejor despliegue del SVG. Reviseramos tales elementos algunas clases más adelante, pero ya les conviene revisar <a href="https://css-tricks.com/using-svg/" target="_blank">Using SVG | CSS Trick</a>.</p>
+                    <p class="small text-white-50 mb-5">
                 </div>
             </div>
         </main>
@@ -116,3 +116,4 @@
         </script>
     </body>
 </html>
+
